fixed wrong width
some Elements were to large

--- a/tpl_lessallrounder/less/mobile.less
+++ b/tpl_lessallrounder/less/mobile.less
@@ -98,4 +98,9 @@ input.hackbox {
         .no_mobile {
         	display: none;
         }
+        
+	/* correct sizing */
+	* {
+		box-sizing: border-box;
+	}
 }
